--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation 'com.google.android.material:material:1.6.0-beta01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
